fix for bug 18693. Event handler default actions shouldn't be done in the capture phase. R=joki.